# pfc

./: Makefile.am  README.md  THANKS  acconfig.h  configure  pfc.html
pfc-0.8/: AUTHORS  ChangeLog  Makefile.in  NEWS  README  configure.in
pfc-0.8/src/: Makefile.am  lzoconf.h  minilzo.c
src/: ChangeLog  Makefile.in  config.h.in  pfc.c
