dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/pfc.c)
AC_PREREQ(2.13)
AM_INIT_AUTOMAKE(pfc, 0.8)
AM_CONFIG_HEADER(src/config.h)


dnl Checks for programs.
AC_PROG_CC
AM_PROG_CC_STDC
AC_PROG_INSTALL

dnl Checks for environment
AC_CYGWIN
AC_MINGW32

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(netinet/in.h sys/wait.h sys/socket.h sys/time.h sys/types.h signal.h errno.h netdb.h stdlib.h stdio.h string.h assert.h stddef.h memory.h fcntl.h termios.h sys/ioctl.h sys/param.h winsock.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_CHECK_TYPE(ptrdiff_t,long)
AC_CHECK_SIZEOF(unsigned short, 2)
AC_CHECK_SIZEOF(unsigned, 4)
AC_CHECK_SIZEOF(unsigned long, 4)
AC_CHECK_SIZEOF(char*, 4)
AC_CHECK_SIZEOF(ptrdiff_t, 4)
AC_CHECK_SIZEOF(size_t, 4)

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_WAIT3
AC_CHECK_FUNCS(select socket strtol memcmp memcpy memmove memset fork setpgrp)

AC_OUTPUT([Makefile src/Makefile])
